title size on small screens fix

--- a/src/scss/medias/_maxWidth576.scss
+++ b/src/scss/medias/_maxWidth576.scss
@@ -4,7 +4,7 @@
     }
 
     .title {
-        width: 330px;
+        width: 320px;
         margin: 0 auto;
         margin-bottom: 60px;
         font-size: 28px;
